--- a/index.html
+++ b/index.html
@@ -71,6 +71,36 @@
         </div>
       </div>
     </section>
+    <section class="pers_block bg_white">
+      <div class="container flex">
+        <div><img src="images/person1.png" alt="icon"></div>
+        <div class="pers_content flex">
+          <h3>People and Society</h3>
+          <p>Our guides to society deliver all the social insight you need, helping you understand how people live, love and play today and why communities are the way they are.</p>
+          <a href="#">Shop Society Guides</a>
+        </div>
+      </div>
+    </section>
+    <section class="pers_block bg_grey">
+      <div class="container flex">
+        <div class="pers_content flex">
+          <h3>People and Society</h3>
+          <p>Our guides to society deliver all the social insight you need, helping you understand how people live, love and play today and why communities are the way they are.</p>
+          <a href="#">Shop Society Guides</a>
+        </div>
+        <div><img src="images/person2.png" alt="icon"></div>
+      </div>
+    </section>
+    <section class="pers_block bg_white">
+      <div class="container flex">
+        <div><img src="images/person3.png" alt="icon"></div>
+        <div class="pers_content flex">
+          <h3>People and Society</h3>
+          <p>Our guides to society deliver all the social insight you need, helping you understand how people live, love and play today and why communities are the way they are.</p>
+          <a href="#">Shop Society Guides</a>
+        </div>
+      </div>
+    </section>
   </main>
   
   <footer>
