--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="owlcarousel/owl.carousel.css">
+  <link rel="stylesheet" href="owlcarousel/owl.theme.default.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
   <title>Thalby</title>
@@ -49,7 +51,7 @@
           <p>Available as ebooks here and on Amazon.</p>
           <h2>Our best sellers</h2>
         </div>
-        <div class="card_wrap flex">
+        <div class="card_wrap flex owl-carousel">
           <article class="cards">
             <img src="images/firstpers.png" alt="Person">
             <h4>Thalby Guide to French Culture and Heritage</h4>
@@ -106,5 +108,11 @@
   <footer>
 
   </footer>
+  <i class="fa-sharp fa-solid fa-chevron-left"></i>
+  <i class="fa-sharp fa-solid fa-chevron-right"></i>
+  <script src="https://kit.fontawesome.com/587afb5443.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+  <script src="js/owl.carousel.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
