--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="owlcarousel/owl.carousel.css">
-  <link rel="stylesheet" href="owlcarousel/owl.theme.default.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
   <title>Thalby</title>
@@ -103,16 +101,124 @@
         </div>
       </div>
     </section>
+    <section class="features">
+      <div class="container">
+        <h4>Some of the features that<br>make Thalby guides unique</h4>
+        <div class="items">
+          <div class="point">
+            <img src="images/Rectangle (1).svg" alt="item1">
+              <p>Written by locals</p>
+            </img>
+          </div>
+          <div class="point">
+            <img src="images/Rectangle (2).svg" alt="item2">
+              <p>Packed with insight</p>
+            </img>
+          </div>
+          <div class="point">
+            <img src="images/Rectangle (3).svg" alt="item3">
+              <p>Interwiews with divense voices</p>
+            </img>
+          </div>
+          <div class="point">
+            <img src="images/Rectangle (4).svg" alt="item4">
+              <p>Rectangle </p>
+            </img>
+          </div>
+          <div class="point">
+            <img src="images/Rectangle (5).svg" alt="item5">
+              <p>A concise 1-hour read</p>
+            </img>
+          </div>
+          <div class="point">
+            <img src="images/Rectangle (6).svg" alt="item6">
+              <p>Instant digital access</p>
+            </img>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="guide">
+      <div class="container">
+        <p class="main_p">Each Thalby guide includes interviews with <br>a range of fascinating voices, such as</p>
+        <div class="persons">
+          <article class="people">
+            <img src="images/per1.png" alt="person1">
+            <p>"I don't like things to be conventional. If it's too nice, I bring disorder."</p>
+            <p>Camille Muller,</p>
+            <p>Landscape Designer, France</p>
+            <div class="discover">
+            <a href="">Discover</a>
+            </div>
+          </article>
+          <article class="people">
+            <img src="images/per2.png" alt="person2">
+            <p>"Magic is not magic in the sense that I can just wish for anything."</p>
+            <p>Sonia Kowalewski,</p>
+            <p>Witch, Germany</p>
+            <div class="discover">
+              <a href="">Discover</a>
+            </div>
+          </article>
+          <article class="people">
+            <img src="images/per3.png" alt="person3">
+            <p>"I was eight years old when I entered my first competition. I won it."</p>
+            <p>Lilly Stoephasius,</p>
+            <p>Skateboarder, Germany</p>
+            <div class="discover">
+              <a href="">Discover</a>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+    <section class="card_wrap">
+      <div class="container">
+        <h3>Keep in touch</h3>
+        <p>Get our travel advice, global views and travel freebies in your inbox</p>
+        <div class="register">
+          <form action="#" method="post" target="_blank">
+            <div class="name"><input name="name" type="text" placeholder="Name"></div>
+            <div class="name"><input name="surname" type="text" placeholder="Last name"></div>
+            <div class="email"><input name="email" type="email" placeholder="Email"></div>
+            <div class="butto">
+              <button type="submit">Subscribe</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
   </main>
-  
   <footer>
-
+    <div class="container">
+      <div class="first_item">
+        <div class="left_side">
+          <a href="#"><img src="images/Logo_white.svg" alt="Logo"></a>
+          <div class="foot_links">
+            <a href="#"><img src="images/Facebook.svg" alt="Facebook"></a>
+            <a href="#"><img src="images/Instagram.svg" alt="Instagram"></a>
+            <a href="#"><img src="images/Twit.svg" alt="Twitter"></a>
+          </div>
+        </div>
+        <div class="right_side">
+          <ul>
+            <li>About</li>
+            <li>About us<a href="#"></a></li>
+            <li>Privat Policy<a href="#"></a></li>
+            <li>Terms and Conditions<a href="#"></a></li>
+            <li>Write for Us<a href="#"></a></li>
+          </ul>
+          <ul>
+            <li>Contact</li>
+            <li>Email hi@thalby.com<a href="#"></a></li>
+            <li>Help<a href="#"></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="sec_item">
+        <p>Thalby LLC © 2021</p>
+      </div>
+    </div>
   </footer>
-  <i class="fa-sharp fa-solid fa-chevron-left"></i>
-  <i class="fa-sharp fa-solid fa-chevron-right"></i>
-  <script src="https://kit.fontawesome.com/587afb5443.js" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
-  <script src="js/owl.carousel.js"></script>
-  <script src="js/script.js"></script>
 </body>
 </html>
