--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/owl.carousel.css">
+  <link rel="stylesheet" href="css/owl.theme.default.css">
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="https://resources/demos/style.css"> 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
   <title>Thalby</title>
 </head>
 <body>
+  <div id="dialog" title="Basic dialog">
+    <p>This is an animated dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the &apos;x&apos; icon.</p>
+  </div>
   <header>
     <div class="container">
       <a href="index.html" class="logo"><img src="images/Logo.svg" alt="Logo"></a>
@@ -17,7 +24,7 @@
           <li><a href="#">Shop</a></li>
           <li><a href="#">Collections</a></li>
           <li><a href="#">Free Guide</a></li>
-          <li><a href="#">Stiries</a></li> 
+          <li><a href="#" id="opener">Stiries</a></li> 
         </ul>
       </nav>
       <ul>
@@ -58,6 +65,24 @@
           </article>
           <article class="cards">
             <img src="images/seconspers.png" alt="Person">
+            <h4>Thalby Guide to French Culture and Heritage</h4>
+            <p>USD 6.99</p>
+            <a href="">Add to cart</a>
+          </article>
+          <article class="cards">
+            <img src="images/thirdpers.png" alt="Person">
+            <h4>Thalby Guide to French Culture and Heritage</h4>
+            <p>USD 6.99</p>
+            <a href="">Add to cart</a>
+          </article>
+          <article class="cards">
+            <img src="images/thirdpers.png" alt="Person">
+            <h4>Thalby Guide to French Culture and Heritage</h4>
+            <p>USD 6.99</p>
+            <a href="">Add to cart</a>
+          </article>
+          <article class="cards">
+            <img src="images/thirdpers.png" alt="Person">
             <h4>Thalby Guide to French Culture and Heritage</h4>
             <p>USD 6.99</p>
             <a href="">Add to cart</a>
@@ -220,5 +245,12 @@
       </div>
     </div>
   </footer>
+  <i class="fa-solid fa-circle-chevron-right"></i>
+  <script src="https://kit.fontawesome.com/587afb5443.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+  <script src="js/owl.carousel.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+  <script src="js/scripts.js  "></script>
+  <script src="https://kit.fontawesome.com/587afb5443.js" crossorigin="anonymous"></script>
 </body>
 </html>
