--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/owl.carousel.css">
-  <link rel="stylesheet" href="css/owl.theme.default.css">
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="https://resources/demos/style.css">
-  <link rel="stylesheet" href="css/menu_mobile.css"> 
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/media.css">
+  <link rel="stylesheet" href="css/works.css">
   <title>Thalby</title>
 </head>
 <body>
@@ -34,8 +30,6 @@
         <li><a href="#"><img src="images/Block.svg" alt="Block"></a></li>
       </ul>
     </div>
-
-
   </header>
   <nav role="navigation" id="nav_menu">
     <div id="menuToggle">
@@ -261,7 +255,6 @@
       </div>
     </div>
   </footer>
-  <i class="fa-solid fa-circle-chevron-right"></i>
   <script src="https://kit.fontawesome.com/587afb5443.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
   <script src="js/owl.carousel.js"></script>
