final worl(without adaptive)

--- a/index.html
+++ b/index.html
@@ -4,68 +4,65 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="https://resources/demos/style.css">
   <link rel="stylesheet" href="css/works.css">
   <title>Thalby</title>
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="https://resources/demos/style.css">
 </head>
 <body>
-  <div id="dialog" title="Basic dialog">
-    <p>This is an animated dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the &apos;x&apos; icon.</p>
-  </div>
   <header>
+
     <div class="container">
+
       <a href="index.html" class="logo"><img src="images/Logo.svg" alt="Logo"></a>
       <nav id="main_nav">
         <ul>
           <li><a href="#">Shop</a></li>
           <li><a href="#">Collections</a></li>
           <li><a href="#">Free Guide</a></li>
-          <li><a href="#" id="opener">Stiries</a></li> 
+          <li><a href="#">Stiries</a></li> 
         </ul>
       </nav>
+
       <ul class="contacts">
-        <li><a href="#" target="_blank"><img src="images/Inst.svg" alt="Instagram"></a></li>
+        <li><a href="https://www.instagram.com/da.nnn.ie/" target="_blank"><img src="images/Inst.svg" alt="Instagram"></a></li>
         <li><a href="#"><img src="images/Search.svg" alt="Search"></a></li>
         <li><a href="#"><img src="images/Block.svg" alt="Block"></a></li>
       </ul>
+
     </div>
+
   </header>
-  <nav role="navigation" id="nav_menu">
-    <div id="menuToggle">
-      <input type="checkbox" />
-      <span></span>
-      <span></span>
-      <span></span>
-      <ul id="menu">
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">Collections</a></li>
-        <li><a href="#">Free Guide</a></li>
-        <li><a href="#" id="opener">Stiries</a></li> 
-      </ul>
-    </div>
-  </nav>
   <main>
+
     <section class="main_banner">
+
       <div class="container flex">
+
         <article> 
-          <h1>Fall deeper in love <br /> with<br /> humanity.</h1>
+          <h1>Fall deeper <br /> in love <br /> with humanity.</h1>
           <p>Get to know the world through our concise, informative and inspiring guides.</p>
           <a href="#">Shop Now</a>
         </article>
+
         <div class="bg-img">
           <img src="images/main-pic.png" alt="Pic">
         </div>
+
       </div>
+
     </section>
     <section class="best-sellers">
+
       <div class="container">
+
         <div class="cards_text">
           <h3>Our guides explain countries and cultures.</h3>
           <p>Are you curious about the world around you? Our guides are for smart global citizens, world travelers and engaged residents who want to gain a deeper understanding of the cultures and societies they care about.</p>
           <p>Available as ebooks here and on Amazon.</p>
           <h2>Our best sellers</h2>
         </div>
+
         <div class="card_wrap flex owl-carousel">
           <article class="cards">
             <img src="images/firstpers.png" alt="Person">
@@ -73,119 +70,154 @@
             <p>USD 6.99</p>
             <a href="">Add to cart</a>
           </article>
+
           <article class="cards">
             <img src="images/seconspers.png" alt="Person">
             <h4>Thalby Guide to French Culture and Heritage</h4>
             <p>USD 6.99</p>
             <a href="">Add to cart</a>
           </article>
+
           <article class="cards">
             <img src="images/thirdpers.png" alt="Person">
             <h4>Thalby Guide to French Culture and Heritage</h4>
             <p>USD 6.99</p>
             <a href="">Add to cart</a>
           </article>
+
           <article class="cards">
             <img src="images/thirdpers.png" alt="Person">
             <h4>Thalby Guide to French Culture and Heritage</h4>
             <p>USD 6.99</p>
             <a href="">Add to cart</a>
           </article>
+
           <article class="cards">
             <img src="images/thirdpers.png" alt="Person">
             <h4>Thalby Guide to French Culture and Heritage</h4>
             <p>USD 6.99</p>
             <a href="">Add to cart</a>
           </article>
+
           <article class="cards">
             <img src="images/thirdpers.png" alt="Person">
             <h4>Thalby Guide to French Culture and Heritage</h4>
             <p>USD 6.99</p>
             <a href="">Add to cart</a>
           </article>
+
         </div>
+
       </div>
+
     </section>
     <section class="pers_block bg_white">
+
       <div class="container flex">
+
         <div><img src="images/person1.png" alt="icon"></div>
         <div class="pers_content flex">
           <h3>People and Society</h3>
           <p>Our guides to society deliver all the social insight you need, helping you understand how people live, love and play today and why communities are the way they are.</p>
           <a href="#">Shop Society Guides</a>
         </div>
+
       </div>
+
     </section>
     <section class="pers_block bg_grey">
+
       <div class="container flex">
+
         <div class="pers_content flex">
           <h3>People and Society</h3>
           <p>Our guides to society deliver all the social insight you need, helping you understand how people live, love and play today and why communities are the way they are.</p>
           <a href="#">Shop Society Guides</a>
         </div>
         <div><img src="images/person2.png" alt="icon"></div>
+
       </div>
+
     </section>
     <section class="pers_block bg_white">
+
       <div class="container flex">
+
         <div><img src="images/person3.png" alt="icon"></div>
         <div class="pers_content flex">
           <h3>People and Society</h3>
           <p>Our guides to society deliver all the social insight you need, helping you understand how people live, love and play today and why communities are the way they are.</p>
           <a href="#">Shop Society Guides</a>
         </div>
+
       </div>
+
     </section>
     <section class="features">
+
       <div class="container">
+
         <h4>Some of the features that<br>make Thalby guides unique</h4>
+
         <div class="items">
           <div class="point">
             <img src="images/Rectangle (1).svg" alt="item1">
               <p>Written by locals</p>
             </img>
           </div>
+
           <div class="point">
             <img src="images/Rectangle (2).svg" alt="item2">
               <p>Packed with insight</p>
             </img>
           </div>
+
           <div class="point">
             <img src="images/Rectangle (3).svg" alt="item3">
               <p>Interwiews with divense voices</p>
             </img>
           </div>
+
           <div class="point">
             <img src="images/Rectangle (4).svg" alt="item4">
               <p>Rectangle </p>
             </img>
           </div>
+
           <div class="point">
             <img src="images/Rectangle (5).svg" alt="item5">
               <p>A concise 1-hour read</p>
             </img>
           </div>
+
           <div class="point">
             <img src="images/Rectangle (6).svg" alt="item6">
               <p>Instant digital access</p>
             </img>
           </div>
         </div>
+
       </div>
+
     </section>
     <section class="guide">
+
       <div class="container">
+
         <p class="main_p">Each Thalby guide includes interviews with <br>a range of fascinating voices, such as</p>
+
         <div class="persons">
+
           <article class="people">
             <img src="images/per1.png" alt="person1">
             <p>"I don't like things to be conventional. If it's too nice, I bring disorder."</p>
             <p>Camille Muller,</p>
             <p>Landscape Designer, France</p>
             <div class="discover">
-            <a href="">Discover</a>
+              <a href="">Discover</a>
             </div>
           </article>
+          
           <article class="people">
             <img src="images/per2.png" alt="person2">
             <p>"Magic is not magic in the sense that I can just wish for anything."</p>
@@ -195,6 +227,7 @@
               <a href="">Discover</a>
             </div>
           </article>
+
           <article class="people">
             <img src="images/per3.png" alt="person3">
             <p>"I was eight years old when I entered my first competition. I won it."</p>
@@ -204,13 +237,19 @@
               <a href="">Discover</a>
             </div>
           </article>
+
         </div>
+
       </div>
+
     </section>
     <section class="card_wrap">
+
       <div class="container">
+
         <h3>Keep in touch</h3>
         <p>Get our travel advice, global views and travel freebies in your inbox</p>
+
         <div class="register">
           <form action="#" method="post" target="_blank">
             <div class="name"><input name="name" type="text" placeholder="Name"></div>
@@ -221,11 +260,15 @@
             </div>
           </form>
         </div>
+
       </div>
+
     </section>
   </main>
   <footer>
+
     <div class="container">
+
       <div class="first_item">
         <div class="left_side">
           <a href="#"><img src="images/Logo_white.svg" alt="Logo"></a>
@@ -235,6 +278,7 @@
             <a href="#"><img src="images/Twit.svg" alt="Twitter"></a>
           </div>
         </div>
+
         <div class="right_side">
           <ul>
             <li>About</li>
@@ -243,23 +287,24 @@
             <li>Terms and Conditions<a href="#"></a></li>
             <li>Write for Us<a href="#"></a></li>
           </ul>
+
           <ul>
             <li>Contact</li>
             <li>Email hi@thalby.com<a href="#"></a></li>
             <li>Help<a href="#"></a></li>
           </ul>
         </div>
+
       </div>
+
       <div class="sec_item">
         <p>Thalby LLC © 2021</p>
       </div>
     </div>
   </footer>
-  <script src="https://kit.fontawesome.com/587afb5443.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
   <script src="js/owl.carousel.js"></script>
   <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
   <script src="js/scripts.js  "></script>
-  <script src="https://kit.fontawesome.com/587afb5443.js" crossorigin="anonymous"></script>
 </body>
 </html>
