--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/works.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Thalby</title>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 </head>
@@ -133,6 +133,7 @@
           <p>Our guides to society deliver all the social insight you need, helping you understand how people live, love and play today and why communities are the way they are.</p>
           <a href="#">Shop Society Guides</a>
         </div>
+
         <div><img src="images/person2.png" alt="icon"></div>
 
       </div>
@@ -143,6 +144,7 @@
       <div class="container flex">
 
         <div><img src="images/person3.png" alt="icon"></div>
+
         <div class="pers_content flex">
           <h3>People and Society</h3>
           <p>Our guides to society deliver all the social insight you need, helping you understand how people live, love and play today and why communities are the way they are.</p>
@@ -203,7 +205,7 @@
 
       <div class="container">
 
-        <p class="main_p">Each Thalby guide includes interviews with <br>a range of fascinating voices, such as</p>
+        <p class="main_p">Each Thalby guide includes interviews with <br />a range of fascinating voices, such as</p>
 
         <div class="persons">
 
@@ -263,6 +265,7 @@
       </div>
 
     </section>
+
   </main>
   <footer>
 
@@ -301,9 +304,11 @@
       </div>
     </div>
   </footer>
+
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
   <script src="js/owl.carousel.js"></script>
   <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
   <script src="js/scripts.js  "></script>
+  
 </body>
 </html>
